--- a/app/src/main/res/layout/activity_fragment.xml
+++ b/app/src/main/res/layout/activity_fragment.xml
@@ -6,7 +6,7 @@
     android:id="@+id/fragmentContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.mark.criminalintent.CrimeActivity">
+    tools:context="com.mark.criminalintent.CrimeListActivity">
 
     <!--<TextView-->
         <!--android:layout_width="wrap_content"-->
